--- a/index.html
+++ b/index.html
@@ -158,7 +158,11 @@
                 <svg height="15" width="15">
                   <circle cx='7' cy='10' r="3" fill="#333" />
                 </svg>
-                Won "Most Technical" for my cohort.
+                Won "Most Technical" for my cohort.<br>
+                <svg height="15" width="15">
+                  <circle cx='7' cy='10' r="3" fill="#333" />
+                </svg>
+                Built a recursive throttler function that included RESTful API calls and algorithms to populate my database with roughly 3000 trails. 
               </p>
             </div>
             <div>
@@ -184,9 +188,18 @@
               <h4>DEVMOUNTAIN TRACKER</h4>
               <div class="divLines" style="float: left; margin-top: 25px;"></div>
               <p class="content-detail">
-                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                <br><br>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
-                vel illum dolore eu feugiat nulla facilisis at vero eros.
+                <strong>Description: </strong>A stats dashboard visually displaying information with charts and graphs on student progress, concerns, and help requests. This app is used by instructors to make sure that the needs of students are being met.
+                <br>
+                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, D3.js
+                <br>
+                <svg height="15" width="15">
+                  <circle cx='7' cy='10' r="3" fill="#333" />
+                </svg>
+                Was lead developer of all D3.js charts.<br>
+                <svg height="15" width="15">
+                  <circle cx='7' cy='10' r="3" fill="#333" />
+                </svg>
+                Was lead designer for the UI/UX of the app.
               </p>
             </div>
             <div>
