--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div class="hero-content">
                 <!--<h3 style='letter-spacing: 3px; color: #eee;'>Missy Beutler</h3>-->
                 <img src="/images/mb.svg">
-                <div class="divLines"></div>
+                <div class="divLines" style='border-color: #999;'></div>
                 <p style='letter-spacing: 3px; color: white; padding-top: 5px;'>Web Developer</p>
                 <br>
                 <!--<span class="typed"></span>-->
@@ -149,9 +149,8 @@
               <h4>THE BEATEN PATH</h4>
               <div class="divLines" style="float: left; margin-top: 25px;"></div>
               <p class="content-detail">
-                <strong>Description:</strong> An outdoor hiking trails app with an interactive map. It gives the option to
-                filter searches based on the length, time to complete, location, and difficulty of the trail. You can also
-                build a profile page with trails you have favorited and trails you have completed.
+                <strong>Description:</strong> Using Utah hiking trails registered with the National Forest Service, this hiking app allows you to search for trails based on length, time to complete, location and difficulty with an interactive map. You can also
+                build a profile page with trails that you have favorited and trails you have completed.
                 <br>
                 <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, Charts.js, Mapbox-gl.js
                 <br>
@@ -173,7 +172,7 @@
                       <div class="image-bg">
                         <div class="desc">
                           <h4>The Beaten Path</h4>
-                          <div class="divLines"></div>
+                          <div class="divLines" style='border-color: #999;'></div>
                           <p>Click to see more</p>
                         </div>
                       </div>
@@ -210,7 +209,7 @@
                       <div class="image-bg">
                         <div class="desc">
                           <h4>DevMountain Tracker</h4>
-                          <div class="divLines"></div>
+                          <div class="divLines" style='border-color: #999;'></div>
                           <p>Click to see more</p>
                         </div>
                       </div>
@@ -226,16 +225,14 @@
       <!--SKILLS-->
       <section class="white-bg" id="skill">
         <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <h3 class="title-small">
-                <span>Skills</span>
-              </h3>
-              <p class="content-detail">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                aliquam erat volutpat.
+          <div class="row" id='skills'>
+            <!--<div class="col-md-3">-->
+                <h4>SKILLS</h4>
+                <div class="divLines"></div>
+              <p class="content-detail" style="text-align: center;">
+                HTML/CSS<br>JAVASCRIPT<br>ANGULARJS<br> jQUERY <br> NODE.JS <br> EXPRESS <br> POSTGRESQL<br>REACT
               </p>
-            </div>
+            <!--</div>-->
             <div class="col-md-9 content-right">
               <!--SKILLST-->
               <!--<div class="skillst">
@@ -287,7 +284,7 @@
       </section>
       <!--/.SKILLS END-->
       <!--TESTIMONIAL-->
-      <section id="testimonial">
+      <!--<section id="testimonial">
         <div class="container">
           <div class="row wrap-testimonial">
             <div class="col-md-10 col-md-offset-1">
@@ -331,7 +328,7 @@
           </div>
         </div>
         <div class="mask-testimonial"></div>
-      </section>
+      </section>-->
       <!--/.TESTMONIAL END-->
       <!--CONTACT-->
       <section id="contact" class="white-bg">
