basic layout done

--- a/index.html
+++ b/index.html
@@ -46,23 +46,8 @@
         <a data-scroll="" href="#work">
           <span>Work</span>
         </a>
-        <a data-scroll="" href="#services">
-          <span>Services</span>
-        </a>
-        <a data-scroll="" href="#employement">
-          <span>Employement</span>
-        </a>
         <a data-scroll="" href="#skill">
           <span>Skills</span>
-        </a>
-        <a data-scroll="" href="#education">
-          <span>Education</span>
-        </a>
-        <a data-scroll="" href="#testimonial">
-          <span>Testimonial</span>
-        </a>
-        <a data-scroll="" href="#blog">
-          <span>Blog</span>
         </a>
         <a data-scroll="" href="#contact">
           <span>Contact</span>
@@ -149,8 +134,10 @@
               <h4>THE BEATEN PATH</h4>
               <div class="divLines" style="float: left; margin-top: 25px;"></div>
               <p class="content-detail">
-                <strong>Description:</strong> Using Utah hiking trails registered with the National Forest Service, this hiking app allows you to search for trails based on length, time to complete, location and difficulty with an interactive map. You can also
-                build a profile page with trails that you have favorited and trails you have completed.
+                <strong>Description:</strong> Using Utah hiking trails registered with the National Forest Service, this
+                hiking app allows you to search for trails based on length, time to complete, location and difficulty with
+                an interactive map. You can also build a profile page with trails that you have favorited and trails you
+                have completed.
                 <br>
                 <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, Charts.js, Mapbox-gl.js
                 <br>
@@ -161,7 +148,8 @@
                 <svg height="15" width="15">
                   <circle cx='7' cy='10' r="3" fill="#333" />
                 </svg>
-                Built a recursive throttler function that included RESTful API calls and algorithms to populate my database with roughly 3000 trails. 
+                Built a recursive throttler function that included RESTful API calls and algorithms to populate my database with roughly
+                3000 trails.
               </p>
             </div>
             <div>
@@ -187,7 +175,9 @@
               <h4>DEVMOUNTAIN TRACKER</h4>
               <div class="divLines" style="float: left; margin-top: 25px;"></div>
               <p class="content-detail">
-                <strong>Description: </strong>A stats dashboard visually displaying information with charts and graphs on student progress, concerns, and help requests. This app is used by instructors to make sure that the needs of students are being met.
+                <strong>Description: </strong>A stats dashboard visually displaying information with charts and graphs on
+                student progress, concerns, and help requests. This app is used by instructors to make sure that the needs
+                of students are being met.
                 <br>
                 <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, D3.js
                 <br>
@@ -227,11 +217,28 @@
         <div class="container">
           <div class="row" id='skills'>
             <!--<div class="col-md-3">-->
-                <h4>SKILLS</h4>
-                <div class="divLines"></div>
-              <p class="content-detail" style="text-align: center;">
-                HTML/CSS<br>JAVASCRIPT<br>ANGULARJS<br> jQUERY <br> NODE.JS <br> EXPRESS <br> POSTGRESQL<br>REACT
-              </p>
+            <h4>SKILLS</h4>
+            <div class="divLines"></div>
+            <div class="skills-container">
+              <div>
+                <h5>JS</h5>
+                <p class="content-detail" style="margin-top: 30px;">
+                  JAVASCRIPT<br>ANGULARJS<br>jQUERY
+                </p>
+              </div>
+              <div>
+                <h5>UI/UX</h5>
+                <p class="content-detail" style="margin-top: 30px;">
+                  HTML/CSS<br>ILLUSTRATOR<br>PHOTOSHOP
+                </p>
+              </div>
+              <div>
+                <h5>BACKEND</h5>
+                <p class="content-detail" style="margin-top: 30px;">
+                  NODE.JS<br>EXPRESS<br>POSTGRESQL
+                </p>
+              </div>
+            </div>
             <!--</div>-->
             <div class="col-md-9 content-right">
               <!--SKILLST-->
@@ -331,26 +338,27 @@
       </section>-->
       <!--/.TESTMONIAL END-->
       <!--CONTACT-->
-      <section id="contact" class="white-bg">
+      <section id="contact" class="footer-bottom">
         <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <h3 class="title-small">
-                <span>Contact</span>
-              </h3>
-              <p class="content-detail">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                aliquam erat volutpat.
+          <div class="row" style="height: 300px;">
+            <!--<div class="col-md-3">-->
+              <h4 style="color: #EEE;">CONTACT</h4>
+              <div class="divLines"></div>
+              <p class="content-detail" style="margin-top: 40px;">
+                <a style="color: white;" href='mailto:missyjbeutler@gmail.com'>missyjbeutler@gmail.com</a>
+                <br>
+                <a style="color: white;" href='tel:1-801-368-3141'>801.368.3141</a>
               </p>
-            </div>
-            <div class="col-md-9 content-right">
-            </div>
+              <a href="https://github.com/missyjeanbeutler" target="_blank"><button>GITHUB</button></a>
+              <br>
+              <a href="https://www.linkedin.com/in/missybeutler/" target="_blank"><button>LINKEDIN</button></a>
+            <!--</div>-->
           </div>
         </div>
       </section>
       <!--/.CONTACT END-->
       <!--FOOTER-->
-      <footer>
+      <!--<footer>
         <div class="footer-top">
           <ul class="socials">
             <li class="facebook">
@@ -370,7 +378,7 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer>-->
       <!--/.FOOTER-END-->
       <!--/.CONTENT END-->
     </div>
