--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bodo - Simple One Page Personal</title>
+  <title>Missy Beutler - Web Developer Portfolio Site</title>
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Bodo - Simple One Page Personal" name="description">
-  <meta content="BdgPixel" name="author">
+  <meta content="Missy Beutler - Web Developer Portfolio site" name="description">
   <!--Fav-->
-  <link href="images/favicon.ico" rel="shortcut icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="images/favicon/manifest.json">
+  <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
   <!--styles-->
   <link rel="stylesheet" href="css/reset.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +22,8 @@
   <link href="css/magnific-popup.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/responsive.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <!--fonts google-->
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
@@ -127,7 +133,7 @@
       </section>
       <!--/.ABOUT END-->
       <!--WORK-->
-      <section class="grey-bg mar-tm-10" id="work">
+      <!--<section class="grey-bg mar-tm-10" id="work">
         <div class="container">
           <div class="row">
             <div class="col-md-3">
@@ -210,8 +216,69 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
       <!--WORK END-->
+
+
+
+
+      <!--WORK NEW-->
+      <section class="grey-bg" id='work'>
+      <div class="beaten-path">
+        <div>
+          <h4>THE BEATEN PATH</h4>
+              <div class="divLines" style="float: left; margin-top: 25px;"></div>
+              <p class="content-detail">
+                <strong>Description:</strong> Using Utah hiking trails registered with the National Forest Service, this
+                hiking app allows you to search for trails based on length, time to complete, location and difficulty with
+                an interactive map. You can also build a profile page with trails that you have favorited and trails you
+                have completed.
+                <br>
+                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, Charts.js, Mapbox-gl.js
+                <br>
+                <svg height="15" width="15">
+                  <circle cx='7' cy='10' r="3" fill="#333" />
+                </svg>
+                Won "Most Technical" for my cohort.<br>
+                <svg height="15" width="15">
+                  <circle cx='7' cy='10' r="3" fill="#333" />
+                </svg>
+                Built a recursive throttler function that included RESTful API calls and algorithms to populate my database with roughly
+                3000 trails.
+              </p>
+        </div>
+      </div>
+
+      <div class="dev-tracker">
+        <div>
+          <h4>DEVMOUNTAIN TRACKER</h4>
+              <div class="divLines" style="float: left; margin-top: 25px;"></div>
+              <p class="content-detail">
+                <strong>Description: </strong>A stats dashboard visually displaying information with charts and graphs on
+                student progress, concerns, and help requests. This app is used by instructors to make sure that the needs
+                of students are being met.
+                <br>
+                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, D3.js
+                <br>
+                <svg height="15" width="15">
+                  <circle cx='7' cy='10' r="3" fill="#333" />
+                </svg>
+                Was lead developer of all D3.js charts.<br>
+                <svg height="15" width="15">
+                  <circle cx='7' cy='10' r="3" fill="#333" />
+                </svg>
+                Was lead designer for the UI/UX of the app.
+              </p>
+              </div>
+        <div>your content</div>
+        <div>your content</div>
+      </div>
+      </section>
+      <!--WORK NEW END-->
+
+
+
+
       <!--SKILLS-->
       <section class="white-bg" id="skill">
         <div class="container">
@@ -240,151 +307,36 @@
               </div>
             </div>
             <!--</div>-->
-            <div class="col-md-9 content-right">
-              <!--SKILLST-->
-              <!--<div class="skillst">
-                  <div class="skillbar" data-percent="78%">
-                    <div class="title head-sm">
-                      HTML 5
-                    </div>
-                    <div class="count-bar">
-                      <div class="count"></div>
-                    </div>
-                  </div>
-                  <div class="skillbar" data-percent="91%">
-                    <div class="title head-sm">
-                      CSS 4
-                    </div>
-                    <div class="count-bar">
-                      <div class="count"></div>
-                    </div>
-                  </div>
-                  <div class="skillbar" data-percent="58%">
-                    <div class="title head-sm">
-                      jQuery
-                    </div>
-                    <div class="count-bar">
-                      <div class="count"></div>
-                    </div>
-                  </div>
-                  <div class="skillbar" data-percent="63%">
-                    <div class="title head-sm">
-                      PHP
-                    </div>
-                    <div class="count-bar">
-                      <div class="count"></div>
-                    </div>
-                  </div>
-                  <div class="skillbar" data-percent="95%">
-                    <div class="title head-sm">
-                      Photoshop
-                    </div>
-                    <div class="count-bar">
-                      <div class="count"></div>
-                    </div>
-                  </div>
-                </div>-->
-              <!--/.SKILLST END-->
-            </div>
+            <!--/.SKILLST END-->
           </div>
         </div>
       </section>
       <!--/.SKILLS END-->
-      <!--TESTIMONIAL-->
-      <!--<section id="testimonial">
-        <div class="container">
-          <div class="row wrap-testimonial">
-            <div class="col-md-10 col-md-offset-1">
-              <div class="owl-carousel">
-                <div class="list-testimonial">
-                  <div class="content-testimonial">
-                    <h3 class="testi">
-                      “ Reza did a phenominal job setting up my a website for my product He performed the task very quickly and efficiently. We
-                      know we have the superior topical pain relief cream on the market and he has helped us communicate
-                      that message via the website he built from scratch. Thanks! ”
-                    </h3>
-                    <p class="people">
-                      Darin Cohen - Active10
-                    </p>
-                  </div>
-                </div>
-                <div class="list-testimonial">
-                  <div class="content-testimonial">
-                    <h3 class="testi">
-                      “ Another successful project working with Reza. He has great design skills, is very responsive and professional. Looking
-                      forward to the next opportunity to work together. ”
-                    </h3>
-                    <p class="people">
-                      Marko Milicevic
-                    </p>
-                  </div>
-                </div>
-                <div class="list-testimonial">
-                  <div class="content-testimonial">
-                    <h3 class="testi">
-                      “ Great designer! I like his sense of design, especially the color scheme. Quick turnaround. Look forward to work with him
-                      again. Thanks!! ”
-                    </h3>
-                    <p class="people">
-                      JK Thang
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="mask-testimonial"></div>
-      </section>-->
-      <!--/.TESTMONIAL END-->
       <!--CONTACT-->
       <section id="contact" class="footer-bottom">
         <div class="container">
           <div class="row" style="height: 300px;">
             <!--<div class="col-md-3">-->
-              <h4 style="color: #EEE;">CONTACT</h4>
-              <div class="divLines"></div>
-              <p class="content-detail" style="margin-top: 40px;">
-                <a style="color: white;" href='mailto:missyjbeutler@gmail.com'>missyjbeutler@gmail.com</a>
-                <br>
-                <a style="color: white;" href='tel:1-801-368-3141'>801.368.3141</a>
-              </p>
-              <a href="https://github.com/missyjeanbeutler" target="_blank"><button>GITHUB</button></a>
+            <h4 style="color: #EEE;">CONTACT</h4>
+            <div class="divLines"></div>
+            <p class="content-detail" style="margin-top: 40px;">
+              <a style="color: white;" href='mailto:missyjbeutler@gmail.com'>missyjbeutler@gmail.com</a>
               <br>
-              <a href="https://www.linkedin.com/in/missybeutler/" target="_blank"><button>LINKEDIN</button></a>
+              <a style="color: white;" href='tel:1-801-368-3141'>801.368.3141</a>
+            </p>
+            <a href="https://github.com/missyjeanbeutler" target="_blank"><button>GITHUB</button></a>
+            <br>
+            <a href="https://www.linkedin.com/in/missybeutler/" target="_blank" style='margin-top: -20px;'><button>LINKEDIN</button></a>
             <!--</div>-->
           </div>
         </div>
       </section>
       <!--/.CONTACT END-->
-      <!--FOOTER-->
-      <!--<footer>
-        <div class="footer-top">
-          <ul class="socials">
-            <li class="facebook">
-              <a href="#" data-hover="Facebook">Facebook</a>
-            </li>
-            <li class="twitter">
-              <a href="#" data-hover="Twitter">Twitter</a>
-            </li>
-            <li class="gplus">
-              <a href="#" data-hover="Google +">Google +</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-            </div>
-          </div>
-        </div>
-      </footer>-->
-      <!--/.FOOTER-END-->
-      <!--/.CONTENT END-->
     </div>
     <!--/.CONTENT-WRAP END-->
   </div>
-  <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="js/jquery.appear.js" type="text/javascript"></script>
   <script src="js/bootstrap.min.js" type="text/javascript"></script>
   <script src="js/classie.js" type="text/javascript"></script>
@@ -395,6 +347,8 @@
   <script src="js/smooth-scroll.min.js" type="text/javascript"></script>
   <script src="js/typed.js" type="text/javascript"></script>
   <script src="js/main.js" type="text/javascript"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script src="js/slider.js"></script>
 </body>
 
 </html>
