slick sliders added

--- a/index.html
+++ b/index.html
@@ -132,98 +132,8 @@
         </div>
       </section>
       <!--/.ABOUT END-->
-      <!--WORK-->
-      <!--<section class="grey-bg mar-tm-10" id="work">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <h4>THE BEATEN PATH</h4>
-              <div class="divLines" style="float: left; margin-top: 25px;"></div>
-              <p class="content-detail">
-                <strong>Description:</strong> Using Utah hiking trails registered with the National Forest Service, this
-                hiking app allows you to search for trails based on length, time to complete, location and difficulty with
-                an interactive map. You can also build a profile page with trails that you have favorited and trails you
-                have completed.
-                <br>
-                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, Charts.js, Mapbox-gl.js
-                <br>
-                <svg height="15" width="15">
-                  <circle cx='7' cy='10' r="3" fill="#333" />
-                </svg>
-                Won "Most Technical" for my cohort.<br>
-                <svg height="15" width="15">
-                  <circle cx='7' cy='10' r="3" fill="#333" />
-                </svg>
-                Built a recursive throttler function that included RESTful API calls and algorithms to populate my database with roughly
-                3000 trails.
-              </p>
-            </div>
-            <div>
-              <ul class="portfolio-image">
-                <li>
-                  <a href="images/trails-intro.png"><img alt="image" src="images/trails-intro.png">
-                    <div class="decription-wrap">
-                      <div class="image-bg">
-                        <div class="desc">
-                          <h4>The Beaten Path</h4>
-                          <div class="divLines" style='border-color: #999;'></div>
-                          <p>Click to see more</p>
-                        </div>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3">
-              <h4>DEVMOUNTAIN TRACKER</h4>
-              <div class="divLines" style="float: left; margin-top: 25px;"></div>
-              <p class="content-detail">
-                <strong>Description: </strong>A stats dashboard visually displaying information with charts and graphs on
-                student progress, concerns, and help requests. This app is used by instructors to make sure that the needs
-                of students are being met.
-                <br>
-                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, D3.js
-                <br>
-                <svg height="15" width="15">
-                  <circle cx='7' cy='10' r="3" fill="#333" />
-                </svg>
-                Was lead developer of all D3.js charts.<br>
-                <svg height="15" width="15">
-                  <circle cx='7' cy='10' r="3" fill="#333" />
-                </svg>
-                Was lead designer for the UI/UX of the app.
-              </p>
-            </div>
-            <div>
-              <ul class="portfolio-image">
-                <li>
-                  <a href="images/stats-intro.png"><img alt="image" src="images/stats-intro.png">
-                    <div class="decription-wrap">
-                      <div class="image-bg">
-                        <div class="desc">
-                          <h4>DevMountain Tracker</h4>
-                          <div class="divLines" style='border-color: #999;'></div>
-                          <p>Click to see more</p>
-                        </div>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>-->
-      <!--WORK END-->
-
-
-
-
       <!--WORK NEW-->
-      <section class="grey-bg" id='work'>
+      <section class="grey-bg" id='work' style='margin-top: -8px;'>
       <div class="beaten-path">
         <div>
           <h4>THE BEATEN PATH</h4>
@@ -247,6 +157,8 @@
                 3000 trails.
               </p>
         </div>
+        <div>your content</div>
+        <div>your content</div>
       </div>
 
       <div class="dev-tracker">
