--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 an interactive map. You can also build a profile page with trails that you have favorited and trails you
                 have completed.
                 <br>
-                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, Charts.js, Mapbox-gl.js
+                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, Charts.js, Mapbox-gl.js, Auth0
                 <br>
                 <svg height="15" width="15">
                   <circle cx='7' cy='10' r="3" fill="#333" />
@@ -154,11 +154,17 @@
                   <circle cx='7' cy='10' r="3" fill="#333" />
                 </svg>
                 Built a recursive throttler function that included RESTful API calls and algorithms to populate my database with roughly
-                3000 trails.
+                3000 trails.<br>
+                <strong><a href='https://github.com/missyjeanbeutler/personal-project' target='_blank'>Github Link</a></strong>
               </p>
         </div>
-        <div>your content</div>
-        <div>your content</div>
+        <div><img src='/images/beatenPath/home-page.png'></div>
+        <div><img src='/images/beatenPath/trails-map.png'></div>
+        <div><img src='/images/beatenPath/trail-search.png'></div>
+        <div><img src='/images/beatenPath/trail-data.png'></div>
+        <div><img src='/images/beatenPath/elevation-map.png'></div>
+        <div><img src='/images/beatenPath/profile-page.png'></div>
+        <div><iframe width="560" height="315" src="https://www.youtube.com/embed/wDZmkix299A" frameborder="0" allowfullscreen></iframe></div>
       </div>
 
       <div class="dev-tracker">
@@ -170,7 +176,7 @@
                 student progress, concerns, and help requests. This app is used by instructors to make sure that the needs
                 of students are being met.
                 <br>
-                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, D3.js
+                <strong>Technologies used:</strong> HTML/CSS, AngularJS, Node.js, Express, PostgreSQL, D3.js, Socket.io, DevMountain Passport
                 <br>
                 <svg height="15" width="15">
                   <circle cx='7' cy='10' r="3" fill="#333" />
@@ -179,11 +185,20 @@
                 <svg height="15" width="15">
                   <circle cx='7' cy='10' r="3" fill="#333" />
                 </svg>
-                Was lead designer for the UI/UX of the app.
+                Was lead designer for the UI/UX of the app.<br>
+                <strong><a href='https://github.com/box-space/box-space' target='_blank'>Github Link</a></strong>
               </p>
               </div>
-        <div>your content</div>
-        <div>your content</div>
+        <div><img src='/images/devTracker/login.png'></div>
+        <div><img src='/images/devTracker/home.png'></div>
+        <div><img src='/images/devTracker/cohortDropdown.png'></div>
+        <div><img src='/images/devTracker/preferences.png'></div>
+        <div><img src='/images/devTracker/cohortList.png'></div>
+        <div><img src='/images/devTracker/cohort.png'></div>
+        <div><img src='/images/devTracker/progress.png'></div>
+        <div><img src='/images/devTracker/pies.png'></div>
+        <div><img src='/images/devTracker/calendar.png'></div>
+        <div><iframe width="560" height="315" src="https://www.youtube.com/embed/2EjULOlhwcc" frameborder="0" allowfullscreen></iframe></div>
       </div>
       </section>
       <!--WORK NEW END-->
