testing image url

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="wrap-hero-content">
               <div class="hero-content">
                 <!--<h3 style='letter-spacing: 3px; color: #eee;'>Missy Beutler</h3>-->
-                <img src="/images/mb.svg">
+                <img src="/portfolio/images/mb.svg">
                 <div class="divLines" style='border-color: #999;'></div>
                 <p style='letter-spacing: 3px; color: white; padding-top: 5px;'>Web Developer</p>
                 <br>
