fixed with no portfolio urls

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="wrap-hero-content">
               <div class="hero-content">
                 <!--<h3 style='letter-spacing: 3px; color: #eee;'>Missy Beutler</h3>-->
-                <img src="/portfolio/images/mb.svg">
+                <img src="/images/mb.svg">
                 <div class="divLines" style='border-color: #999;'></div>
                 <p style='letter-spacing: 3px; color: white; padding-top: 5px;'>Web Developer</p>
                 <br>
@@ -158,12 +158,12 @@
                 <strong><a href='https://github.com/missyjeanbeutler/personal-project' target='_blank'>Github Link</a></strong>
               </p>
         </div>
-        <div><img src='/portfolio/images/beatenPath/home-page.png'></div>
-        <div><img src='/portfolio/images/beatenPath/trails-map.png'></div>
-        <div><img src='/portfolio/images/beatenPath/trail-search.png'></div>
-        <div><img src='/portfolio/images/beatenPath/trail-data.png'></div>
-        <div><img src='/portfolio/images/beatenPath/elevation-map.png'></div>
-        <div><img src='/portfolio/images/beatenPath/profile-page.png'></div>
+        <div><img src='/images/beatenPath/home-page.png'></div>
+        <div><img src='/images/beatenPath/trails-map.png'></div>
+        <div><img src='/images/beatenPath/trail-search.png'></div>
+        <div><img src='/images/beatenPath/trail-data.png'></div>
+        <div><img src='/images/beatenPath/elevation-map.png'></div>
+        <div><img src='/images/beatenPath/profile-page.png'></div>
         <div><iframe width="560" height="515" src="https://www.youtube.com/embed/wDZmkix299A" frameborder="0" allowfullscreen></iframe></div>
       </div>
 
@@ -189,15 +189,15 @@
                 <strong><a href='https://github.com/box-space/box-space' target='_blank'>Github Link</a></strong>
               </p>
               </div>
-        <div><img src='/portfolio/images/devTracker/login.png'></div>
-        <div><img src='/portfolio/images/devTracker/home.png'></div>
-        <div><img src='/portfolio/images/devTracker/cohortDropdown.png'></div>
-        <div><img src='/portfolio/images/devTracker/preferences.png'></div>
-        <div><img src='/portfolio/images/devTracker/cohortList.png'></div>
-        <div><img src='/portfolio/images/devTracker/cohort.png'></div>
-        <div><img src='/portfolio/images/devTracker/progress.png'></div>
-        <div><img src='/portfolio/images/devTracker/pies.png'></div>
-        <div><img src='/portfolio/images/devTracker/calendar.png'></div>
+        <div><img src='/images/devTracker/login.png'></div>
+        <div><img src='/images/devTracker/home.png'></div>
+        <div><img src='/images/devTracker/cohortDropdown.png'></div>
+        <div><img src='/images/devTracker/preferences.png'></div>
+        <div><img src='/images/devTracker/cohortList.png'></div>
+        <div><img src='/images/devTracker/cohort.png'></div>
+        <div><img src='/images/devTracker/progress.png'></div>
+        <div><img src='/images/devTracker/pies.png'></div>
+        <div><img src='/images/devTracker/calendar.png'></div>
         <div><iframe width="560" height="515" src="https://www.youtube.com/embed/2EjULOlhwcc" frameborder="0" allowfullscreen></iframe></div>
       </div>
       </section>
