--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <div>
                 <h5>UI/UX</h5>
                 <p class="content-detail" style="margin-top: 30px;">
-                  HTML/CSS<br>ILLUSTRATOR<br>PHOTOSHOP
+                  HTML/CSS<br>D3<br>ILLUSTRATOR<br>PHOTOSHOP
                 </p>
               </div>
               <div>
