--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
         <div class="container">
           <div class="row" style="height: 300px;">
             <!--<div class="col-md-3">-->
+              <br>
             <h4 style="color: #EEE;">CONTACT</h4>
             <div class="divLines"></div>
             <p class="content-detail" style="margin-top: 40px;">
@@ -254,6 +255,11 @@
             <a href="https://github.com/missyjeanbeutler" target="_blank"><button>GITHUB</button></a>
             <br>
             <a href="https://www.linkedin.com/in/missybeutler/" target="_blank" style='margin-top: -20px;'><button>LINKEDIN</button></a>
+            <br>
+            <a href="./images/Missy-Beutler-Resume.pdf" target="_blank" style='margin-top: -20px;'><button>RESUME</button></a>
+            <br>
+            <br>
+            
             <!--</div>-->
           </div>
         </div>
