--- a/index.html
+++ b/index.html
@@ -245,7 +245,13 @@
           <div class="row" style="height: 300px;">
             <!--<div class="col-md-3">-->
               <br>
-            <h4 style="color: #EEE;">CONTACT</h4>
+              <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h4 style="color: #EEE; margin-top: 20px;">CONTACT</h4>
             <div class="divLines"></div>
             <p class="content-detail" style="margin-top: 40px;">
               <a style="color: white;" href='mailto:missyjbeutler@gmail.com'>missyjbeutler@gmail.com</a>
@@ -256,10 +262,13 @@
             <br>
             <a href="https://www.linkedin.com/in/missybeutler/" target="_blank" style='margin-top: -20px;'><button>LINKEDIN</button></a>
             <br>
-            <a href="./images/Missy-Beutler-Resume.pdf" target="_blank" style='margin-top: -20px;'><button>RESUME</button></a>
+            <a href="./images/Missy-Beutler-Resume.pdf" target="_blank" style='margin-top: -20px; margin-bottom: 20px;'><button>RESUME</button></a>
             <br>
             <br>
-            
+            <br>
+            <br>
+            <br>
+            <br>
             <!--</div>-->
           </div>
         </div>
